Fix handle snapping in the transform tool

The patch fixes two issues:

1) Shift modifier does not disable snapping for the strategies that
   use Shift as well. That is needed to resolve the conflict of
   modifiers between the transform tool and the snapping system.

2) Enables snapping for cage, warp and mesh transform mode.

BUG:435970